# emojiNorm.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
emojiNorm/: __init__.py
tests/: tests.py
