[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "emojiNorm"
readme = "ReadMe.md"
description = "A library to normalize Unicode emoji sequencies"
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["emojiNorm"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"more-itertools", # @ git+https://github.com/more-itertools/more-itertools
	"PyICU",
]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/emojiNorm.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["emojiNorm", "emojiNorm.*"]

[tool.setuptools_scm]

[tool.black]
line-length = 100500
